[package]
name = "ford-johnson"
version = "0.2.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Implementation of the Ford-Johnson algorithm (aka merge-insertion sort)"

[dependencies]

[dev-dependencies]
rand = "0.7"
rand_pcg = "0.2"
quickcheck = "0.9"
quickcheck_macros = "0.9"
